Modify website metadata in _config.yml
Updated website title, author, and description.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: minima
 
-title: Lex Website
-author: Lex
-description: This is my website
+title: Tittle
+author: author
+description: description 
